# bml3emulator

./: .gitignore  CMakeLists.txt  GALAXY.txt  PEARL.txt  README.md  flash.bat
bml3emulator/: CMakeLists.txt  bml3emulator.c  bml3font.h  bml3kanji_dummy.h  bml3keymap.h  bml3rom_dummy.h  hsync.pio  rgb.pio  vsync.pio
bml3emulator/bml3kanji/: kanji.rom
